# om26630fdk-playground-fw

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  fw-openocd.cfg  linker-script.ld
cmake/: arm-none-eabi-gcc.cmake
doc/: clrc663-cfg.md
src/: CMakeLists.txt  main.c  task-ccc.c  task-ccc.h
src/board/: board.c  board.h  clk.c  clk.h
src/board/ccc/: ccc.c  ccc.h  gpio.c  gpio.h  tusb_config.h  usb.c  usb.h
src/board/ccc/tusb-compat/: chip.h
src/board/nfc/: clrc663-spi-impl.c  gpio.c  gpio.h  nfc.c  nfc.h  spi.c  spi.h
src/common/: compiler.h  types.h  util.h
src/drivers/clrc663/: clrc663-cmd.c  clrc663-cmd.h  clrc663-spi.c  clrc663-spi.h  clrc663.c  clrc663.h
src/hal/: gpio.c  gpio.h  nvic.h  pincm.c  pincm.h  spi.c  spi.h  startup.c  sysctl.c  sysctl.h  usb.c  usb.h  util.h
